tests/context-mode/processors/fixtures/build/cargo-large-posix.txt
error[E0308]: mismatched types
  --> src/main.rs:12:18
   |
12 |     let port: u16 = "3000";
   |                  ^^^^^^ expected `u16`, found `&str`
warning: unused variable: `debug`
  --> src/main.rs:20:9
error: could not compile `demo` (bin "demo") due to 1 previous error; 1 warning emitted
